# plex-oms-service

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: oms-rule.mdc
app/: __init__.py  config.py  main.py
app/api/: __init__.py
app/api/routes/: auth.py  media_sources.py
app/core/: __init__.py
app/middleware/: __init__.py  security.py
app/models/: __init__.py  plex_models.py
app/schemas/: __init__.py  auth_schemas.py  media_source_schemas.py
app/services/: __init__.py  auth_service.py  plex_service.py
app/utils/: __init__.py  exceptions.py  validators.py
docs/: implementation_plan.md  project_overview.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/__tests__/: setup.ts  type-validation.test.ts  types.test.ts
frontend/src/components/: AuthButton.tsx  MediaSourcesList.tsx
frontend/src/components/__tests__/: AuthButton.test.tsx  MediaSourcesList.test.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/contexts/__tests__/: AuthContext.test.tsx
frontend/src/hooks/: useAuth.tsx  useMediaSources.tsx
frontend/src/hooks/__tests__/: useAuth.test.tsx  useMediaSources.test.tsx
frontend/src/services/: api.ts
frontend/src/services/__tests__/: api.test.ts
frontend/src/types/: index.ts
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_auth_routes.py  test_main.py  test_media_source_routes.py
tests/unit/: __init__.py  test_auth_schemas.py  test_auth_service.py  test_config.py  test_exceptions.py  test_media_source_schemas.py  test_plex_models.py  test_plex_service.py  test_security_middleware.py  test_validators.py
